<?xml version="1.0"?>
<package format="2">
  <name>sawyer_robotiq</name>
  <version>0.0.0</version>
  <description>The sawyer_robotiq package</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>intera_interface</exec_depend>
  <exec_depend>robotiq_c_model_viz</exec_depend>
  <exec_depend>robotiq_c_model_control</exec_depend>

  <export>
  </export>
</package>
